--- a/src/App.css
+++ b/src/App.css
@@ -494,7 +494,7 @@ h6,
 }
 
 #hero .email-form .error-message {
-  visibility: hidden;
+  display: none;
   color: #fff;
   background: #ed3c0d;
   text-align: center;
@@ -511,7 +511,7 @@ h6,
   font-weight: 600;
 }
 
-#hero .email-form .sendMessage {
+#hero .email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
